@startuml

[*] --> CREATED
CREATED --> CREATED : ci_sample_added
CREATED --> CREATED : ci_sample_deleted
CREATED --> CREATED : events_deleted
CREATED --> SCHEDULED : events_added
CREATED --> EXECUTION_STARTED : execute
SCHEDULED --> SCHEDULED : events_added
SCHEDULED --> SCHEDULED : ci_sample_deleted
SCHEDULED --> READY_FOR_REVIEW : ci_sample_added
SCHEDULED --> CREATED : events_deleted
READY_FOR_REVIEW --> SCHEDULED : ci_sample_deleted
READY_FOR_REVIEW --> CREATED : events_deleted
READY_FOR_REVIEW --> EXECUTION_STARTED : execute
EXECUTION_STARTED --> EXECUTION_STARTED : execute
EXECUTION_STARTED --> EXECUTED : execution_complete
FAILEDVALIDATION --> EXECUTION_STARTED : execute
FAILEDVALIDATION --> SCHEDULED : ci_sample_deleted
EXECUTED --> VALIDATED : validate
EXECUTED --> FAILEDVALIDATION : invalidate
VALIDATED --> READY_FOR_LIVE : publish
VALIDATED --> LIVE : go_live
READY_FOR_LIVE --> LIVE : go_live
LIVE --> ENDED : end_exercise
ENDED --> ENDED : ci_sample_deleted
@enduml